css/style.css
/* *** REGOLE GENERALI ***  */
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-size: 14px;
    font-family: 'Montserrat', sans-serif;
}

ul{
    list-style-type: none;
}

h2{
    font-size: 1.75rem;
}

h3{
    font-size: 1.2rem;
}

h4,
.small-text{
    font-size: .9em;
}

.color-white,
h4,
h3,
h2{
    color: white;
}

.color-grey,
li a{
    color: gray;
}

.margin-bottom{
    margin-bottom: 1.75rem;
}

#container{
    height: calc(100vh - 90px);
    width: 100vw;
}

a{
    text-decoration: none;
}

.flex-between-center{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.flex-between{
    display: flex;
    justify-content: space-between;
}

.flex-column-center{
    display: flex;
    flex-direction: column;
    align-items: center;
}

/* *** TOPBAR ***  */
#topbar{
    background-color: rgba(0,0,0,0.5);
    width: calc(100vw - 240px);
    height: 90px;
    position: fixed;
    right: 0;
    display: flex;
    align-items: center;
    justify-content: right;
    padding-right: 2.5rem;
    z-index: 2;
}

#topbar a{
    border: 1px solid white;
    padding: .75rem 2rem;
    border-radius: 2rem;
}

/* *** SIDEBAR +++  */
#sidebar{
    background-color: black;
    width: 240px;
    height: 100%;
    float: left;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 1.25rem 1.25rem 0.5rem;
    position: relative;
}
/* logo  */
#logo-container{
    width: 65%;
}

#sidebar .hidden{
    display: none;
}

#sidebar nav hr{
    border: 2px solid rgb(173,255,46);
    transform: rotate(90deg);
    width: 2.5rem;
    position: absolute;
    left: -1.25rem;
    top: calc(90px + .25rem)
}

#sidebar nav img,
#profile{
    height: 1.5rem;
    margin-right: .25rem;
    vertical-align: bottom;
}

#sidebar ul li,
#sidebar h4{
    margin-bottom: 1.25rem;
}

#playlist i{
    background-color: grey;
    padding: .5rem;
    margin-right: .5rem;
}

#playlist .crea{
    font-size: 1.15rem;
    margin-bottom: 1.25rem;
    display: inline-block;
}

#profile{
    border-radius: 100%;
    width: 1.5rem;
    background-color: grey;
    margin-right: .5rem;
}

#user #download{
    height: 1rem;
    vertical-align: bottom;
    margin-right: .5rem;
}

#user hr{
    border-color: grey;
    border-top: none;
    margin-bottom: .75rem;
    margin-top: .75rem;
}

#user h5{
    display: inline-block;
}


#user div:last-child{
    display: flex;
    align-items: center;
}
/* *** MAIN ***  */
main{
    background-color: rgb(20,25,34);
    height: calc(100vh - 90px);
    width: calc(100vw - 240px);
    float: right;
    padding: 90px 1.5rem 1.5rem 1.5rem;
    overflow: auto;
    
}
/* nav  */
#nav-container{
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
}

#nav-container nav{
    width: 50%;
}

#nav-container nav ul{
    display: flex;
    justify-content: space-between;
}

#nav-container nav ul li:first-child hr{
    border-bottom: 2px solid rgb(173,255,46);
    border-top: none;
    width: 40%;
    margin: auto;
}

/* section cards  */
main section{
    margin-top: 2rem;
}

main section .title span{
    margin-top: .75rem;
    display: block;
}

main section.small{
    margin-top: 3rem;
}

main section.small .row-cards{
    display: flex;
    gap: 1rem;
}

.play-button{
    color: white;
    font-size: 4rem;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 0;
}

.img-container{
    position: relative;
}



.row-cards .card{
    width: calc(100% / 6 - 1rem);
}

.row-cards .card img{
    width: 100%;
    margin-bottom: 1rem;
}

.card .descrition {
    text-align:center;
}

.card .descrition span{
    font-size: .9rem;
}

.round{
    border-radius: 100%;
}

/* *** PLAYERBAR ***  */
#playerbar{
    background-color: rgb(40,40,40);
    height: 90px;
    width: 100%;
    display: flex;
    align-items: center;
    padding: .75rem;
    z-index: 2;
    position: sticky;
}

#playerbar .row{
    width: 100%;
}
/* parte sinistra  */
#playerbar .row .left{
   gap: 4rem;
}

#song img{
    max-width: 3rem;
    margin-right: .75rem;
    width: 100%;
}


#name span{
    font-size: .75rem;
}

#icons-left i:last-child{
    margin-left: 1rem;
}

#icons-left i,
#playerbar .center .commands ul i{
    font-size: 1.25rem;
}

/* parte centrale  */
#playerbar .center{
    width: 38%;
    display: flex;
}

#playerbar .center .commands{
    text-align: center;
    margin-bottom: 1rem;
}

#playerbar .center .commands ul{
    gap: 2rem;
}

#playerbar .center .commands ul i{
    cursor: pointer;
}

#playerbar .center .commands .fa-circle-play{
    font-size: 2rem;
}

#playerbar .center .timebar{
    width: 100%;
}

input[type=range]{
    height: .25rem;
    border-radius: 1rem;
    background: #d3d3d3;
    opacity: 0.7;
}

#playerbar .center .timebar input[type=range] {
    margin-left: .75rem;
    margin-right: .75rem;
    flex-grow: 2;
}

/* parte destra  */
#playerbar .row .right{
    display: flex;
}

#playerbar .right ul li,
.right input[type=range]{
    margin-left: 1rem;
}

#playerbar .right ul li:last-child{
    margin-left: 1rem;flex-grow: 2;
}

.right input{
    width: 100%;
}

/* *** HOVER ***  */
.card img:hover{
    filter: opacity(0.5);
    position: relative;
}

.card img:hover + .play-button{
    opacity: 1;
}

#topbar a:hover{
    font-size: 1.25rem;
}

#playerbar .center .commands #play:hover{
    font-size: 2.1rem;
}

a:hover{
    color: white;
}

#playerbar #name span:hover{
    color: white;
    text-decoration: underline;
    cursor: pointer;
}

#icons-left i:hover{
    color: white;
    cursor: pointer;
}

/* ******** RESPONSIVE *********  */
/* medium < 992px */
@media screen and (max-width: 991px) {
    /* main , nav  */
    main #nav-container nav{
        width: 100%;  
    }
    main #nav-container nav ul{
        flex-wrap: wrap;
        justify-content: space-around;
        gap: 2rem;
    }

   /* main, section cards  */
    main .row-cards{
        flex-wrap: wrap;
        justify-content: flex-start;
        gap: 1rem;
    }

    main .row-cards .card{
        width: calc(100% / 4 - 1rem);
    }

    /* #playerbar  */
    #playerbar .row .left{
        gap: 3.5rem;
    }
}


/* small < 768px  */
@media screen and (max-width: 767px) {
   /* main, section cards  */
    main .row-cards .card{
        width: calc(100% / 2 - 1rem);
    }

    /* #playerbar  */
    #playerbar .row .left{
        gap: 2rem;
        width: 31%;
        padding-right: 3rem;
    }

     #playerbar .row .right{
        width: 31%;
    }

     #playerbar .row .left #icons-left{
        display: flex;
        flex-direction: column;
        gap: .5rem;
    }

     #playerbar .row .left #icons-left i{
        margin-left: 0;
    }
}


/* xsmall < 576px  */
@media screen and (max-width: 575px) {
    /* topbar  */
    #topbar{
        width: calc(100vw - 50px);   
    }

    /* sidebar  */
    #sidebar{
        width: 50px;
        padding: 1rem;
    }

    #sidebar #logo-container,
    #sidebar .visible,
    #playlist,
    #sidebar hr,
    #user{
        display: none;
    }

    #sidebar .hidden{
        display: block;
        text-align: center;
    }

    .hidden #profile{
        margin-top: .5rem;
    }

    .hidden #download{
        height: 1rem;
        text-align: center;
    }
    
    /* main  */
    main {
        width: calc(100vw - 50px);
    }

    /* #playerbar */
    #playerbar .right ul{
        flex-wrap: wrap;
        gap: 1rem;
    }

    #playerbar .right,#playerbar .left{
        width: 20%;
    }
}

